--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,6 @@ A set of curated resources tied to use-cases, and a space to organize our discus
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 
-
 **NOTE: this is now publicly hosted but not indexed. Please be careful not to share any confidential data or sensitive information.**
 
 ## Rethink Priorities: Our approach to empirical and quantitative work
@@ -18,122 +17,104 @@ A github-hosted 'bookdown' for structured in-depth discussion
 \
 
 ::: {.alert .alert-secondary}
-
-
 *David Reinstein's conception:*
 
-- Don't share any confidential data or sensitive information
+-   Don't share any confidential data or sensitive information
 
-- Don't feel compelled to flesh out all sections with original content. Don’t add content just because "it’s in a typical syllabus’.
+-   Don't feel compelled to flesh out all sections with original content. Don't add content just because "it's in a typical syllabus'.
 
-- Focus on things that we use, have used, want to use, or have been requested to address.
-     - Secondarily, on things relevant to Effective Altruism-related research in general
-- Do curate link, and embed resources from elsewhere
+-   Focus on things that we use, have used, want to use, or have been requested to address.
 
-- Incorporate examples from our work (where these are not sensitive or they where can be made anonymous)
+    -   Secondarily, on things relevant to Effective Altruism-related research in general
 
+-   Do curate link, and embed resources from elsewhere
 
-- Do put in content that is more in-depth and technical, or involving R-code and tools
-    - Still, do try to 'offset' details (in folding blocks, appendix sections, margin notes), where it would otherwise clutter the book
-- Start with 'plain language' explanations of technical content; for ourselves, and potentially to share with partners in future
+-   Incorporate examples from our work (where these are not sensitive or they where can be made anonymous)
 
+-   Do put in content that is more in-depth and technical, or involving R-code and tools
+
+    -   Still, do try to 'offset' details (in folding blocks, appendix sections, margin notes), where it would otherwise clutter the book
+
+-   Start with 'plain language' explanations of technical content; for ourselves, and potentially to share with partners in future
 
 I also hope to use this to develop 'templates and standard practices' for our work.
-
-
-
 :::
 
 \
 
 **What to include and when to dive into the rabbit hole?** (Unfold: the 'second time it comes up' rule)
 
-::: {.callout-note collapse='true'}
- In ‘building a knowledge base’, there are some things that are important to include, but others should be excluded.  If we are compulsive and auto-nerd-sniped to go down every rabbit hole it will be wasteful. But some rabbit holes will be worth going down, at least partially.
+::: {.callout-note collapse="true"}
+In 'building a knowledge base', there are some things that are important to include, but others should be excluded. If we are compulsive and auto-nerd-sniped to go down every rabbit hole it will be wasteful. But some rabbit holes will be worth going down, at least partially.
 
-*What’s a good rule-of-thumb for knowing if it’s worth a dive?* Maybe the 'second time rule'?
+*What's a good rule-of-thumb for knowing if it's worth a dive?* Maybe the 'second time rule'?
 
 Mark the issue the first time it comes up, perhaps leave a placeholder and a link to the original notes or discussion.
 
-Then the second time an issue comes up it may be safe to assume its an ‘important issue to dive into and document’?
-
-
-
+Then the second time an issue comes up it may be safe to assume its an 'important issue to dive into and document'?
 :::
-
 
 Below, 'a partial dive into the rabbit hole', for one possible framework.
 
 ::: {.alert .alert-secondary}
-
-
-
 What do I mean by a 'partial dive into the rabbit hole?'
 
-- Explain how it applied to our problem (generically if there is a confidentiality issue)
+-   Explain how it applied to our problem (generically if there is a confidentiality issue)
 
-- Curated links [PeteW-gists](https://gist.github.com/peterhurford/)-eqsue,
+-   Curated links [PeteW-gists](https://gist.github.com/peterhurford/)-eqsue,
 
-- characterize in our own words (but concisely)
+-   characterize in our own words (but concisely)
 
-- give a code example in a 'vignette',
+-   give a code example in a 'vignette',
 
-- check our understanding through communication and discussion with others, flag key issues
-
-
+-   check our understanding through communication and discussion with others, flag key issues
 :::
 
-
-
 ## Sections and organization {#outline_sections}
+
 (Proposed/discussed below -- keep updated with actual structure)
 
 Major 'parts':
 
-1. **Presentation, code, organization:**
+1.  **Presentation, code, organization:**
 
 Our guidelines, style, approaches to doing and presenting coding and data work (discussions in progress). Discuss things like reproduceability, use of Tidy syntax (or not), Quarto, storing and labeling data, separating build and analysis, etc. Guides to presnting tables, visuals (moving that to ['how to visualize'](https://rethinkpriorities.github.io/how-to-visualize/), reporting results in text.
 
+2.  **Designing surveys and trials**
 
-2. **Designing surveys and trials**
+Quantitative, 'qualitative', and practical implementation issues in running surveys and various types of experiments. Some overlap with EAMT methods gitbook.
 
-Quantitative, 'qualitative', and practical implementation issues in running surveys and various types of experiments. Some overlap with EAMT methods gitbook. 
-
-
-
-3. **Statistics and modeling**
+3.  **Statistics and modeling**
 
 A range of frameworks: Bayesian, frequentist, descriptive
 
-and cases: prediction, causal inference, statistical inference and updating, dimension reduction and recovering 'factors'...^[As always, focus on 'what repeatedly comes up in our work', linking the practical cases]
+and cases: prediction, causal inference, statistical inference and updating, dimension reduction and recovering 'factors'...[^index-1]
 
-Aiming at 'preferred approaches' (e.g., 'which tests') with justifications and code vignettes and 
+[^index-1]: As always, focus on 'what repeatedly comes up in our work', linking the practical cases
 
+Aiming at 'preferred approaches' (e.g., 'which tests') with justifications and code vignettes and
 
 ::: {.callout-note collapse="true"}
 ## Modeling, Prediction, inference, and machine learning .. some key topics
 
-- "Multi-variable 'regression' models" and specification choices
-- Interpreting model results
-- Predictive modeling and machine learning
-- Practical Bayesian approaches and interpretations
-- Psychometrics, especially factor analysis
+-   "Multi-variable 'regression' models" and specification choices
+-   Interpreting model results
+-   Predictive modeling and machine learning
+-   Practical Bayesian approaches and interpretations
+-   Psychometrics, especially factor analysis
 :::
 
-4. **Other topics and worked examples**
+4.  **Other topics and worked examples**
 
-- Stuff that didn't fit in previous sections
-- Practical tools like Fermi Monte-carlo
-- Worked examples linked in previous sections
+-   Stuff that didn't fit in previous sections
+-   Practical tools like Fermi Monte-carlo
+-   Worked examples linked in previous sections
 
+[**MONTE-CARLO 'FERMI ESTIMATION' APPROACHES**](#fermi)**;**
 
-
-
-**[MONTE-CARLO 'FERMI ESTIMATION' APPROACHES](#fermi);**
-
-- The basic ideas
-- Causal and Guesstimate
-- Code-based tools
+-   The basic ideas
+-   Causal and Guesstimate
+-   Code-based tools
 
 ## Favorite resources, references, tools
 
@@ -160,6 +141,4 @@ dependencies[2] %>% unique() %>% as.list()
 
 ```
 
-
 ## Git repo, shared files, procedure for editing
-
